[package]
name = "polkadot-availability-store"
description = "Persistent database for parachain data"
version = "0.7.8"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
polkadot-primitives = { path = "../primitives" }
polkadot-erasure-coding = { path = "../erasure-coding" }
polkadot-runtime = { path = "../runtime" }
parking_lot = "0.9.0"
derive_more = "0.99"
log = "0.4.8"
futures01 = "0.1.17"
futures = { package = "futures", version = "0.3.1", features = ["compat"] }
tokio = "0.1.7"
exit-future = "0.2.0"
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }
sc-network = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
consensus_common = { package = "sp-consensus", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
client = { package = "sc-client-api", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
sc-client = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
sp-runtime = { git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }
sp-blockchain = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
sp-api = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
keystore = { package = "sc-keystore", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
sp-core = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
kvdb = "0.1.1"
kvdb-memorydb = "0.1.2"

[target.'cfg(not(target_os = "unknown"))'.dependencies]
kvdb-rocksdb = "0.2"
