[package]
name = "polkadot-collator"
version = "0.7.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Collator node implementation"
edition = "2018"

[dependencies]
futures01 = { package = "futures", version = "0.1.17" }
futures = { version = "0.3.1", features = ["compat"] }
client = { package = "substrate-client", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
client-api = { package = "substrate-client-api", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
primitives = { package = "substrate-primitives", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
substrate-network = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
consensus_common = { package = "substrate-consensus-common", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
polkadot-runtime = { path = "../runtime" }
polkadot-primitives = { path = "../primitives" }
polkadot-cli = { path = "../cli" }
polkadot-network = { path = "../network" }
polkadot-validation = { path = "../validation" }
polkadot-service = { path = "../service" }
log = "0.4.8"
tokio = "0.1.22"
futures-timer = "1.0"

[dev-dependencies]
keyring = { package = "substrate-keyring", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
