[package]
name = "polkadot-collator"
version = "0.8.22"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Collator node implementation"
edition = "2018"

[dependencies]
futures = "0.3.4"
sc-service = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-executor = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-cli = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-client-api = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-network = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-blockchain = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-api = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-core = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-runtime = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
consensus_common = { package = "sp-consensus", git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
polkadot-primitives = { path = "../primitives" }
polkadot-cli = { path = "../cli" }
polkadot-network = { path = "../network" }
polkadot-validation = { path = "../validation" }
polkadot-service = { path = "../service", optional = true}
polkadot-service-new = { path = "../node/service", optional = true }
log = "0.4.8"
tokio = "0.2.13"
futures-timer = "2.0"
codec = { package = "parity-scale-codec", version = "1.3.4" }

[dev-dependencies]
keyring = { package = "sp-keyring", git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }

[features]
default = ["service-old"]
service-old = [ "polkadot-service" ]
service-rewr = [ "polkadot-service-new" ]
