[package]
name = "polkadot-executor"
version = "0.6.17"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Polkadot node implementation in Rust."
edition = "2018"

[dependencies]
substrate-executor = { git = "https://github.com/cheme/substrate", branch = "child_uuid_nt" }
polkadot-runtime = { path = "../runtime" }
