[package]
name = "polkadot-executor"
version = "0.7.9"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Polkadot node implementation in Rust."
edition = "2018"

[dependencies]
sc-executor = { git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
polkadot-runtime = { path = "../runtime" }
