[package]
name = "polkadot-primitives"
version = "0.7.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.102", optional = true, features = ["derive"] }
parity-scale-codec = { version = "1.1.0", default-features = false, features = ["bit-vec", "derive"] }
primitives = { package = "substrate-primitives", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }
application-crypto = { package = "substrate-application-crypto", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }
sr-api = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1", default-features = false }
sr-version = { git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }
rstd = { package = "sr-std", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }
polkadot-parachain = { path = "../parachain", default-features = false }
bitvec = { version = "0.15.2", default-features = false, features = ["alloc"] }
babe = { package = "pallet-babe", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }

[dev-dependencies]
substrate-serializer = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
pretty_assertions = "0.5.1"

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"primitives/std",
	"sr-api/std",
	"rstd/std",
	"sr-version/std",
	"runtime_primitives/std",
	"serde",
	"polkadot-parachain/std",
	"bitvec/std",
	"babe/std"
]
