[package]
name = "polkadot-primitives"
version = "0.7.8"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.102", optional = true, features = ["derive"] }
parity-scale-codec = { version = "1.1.0", default-features = false, features = ["bit-vec", "derive"] }
primitives = { package = "sp-core", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }
application-crypto = { package = "sc-application-crypto", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }
sp-api = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1", default-features = false }
sp-version = { git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }
rstd = { package = "sp-std", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }
polkadot-parachain = { path = "../parachain", default-features = false }
trie = { package = "sp-trie", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }
bitvec = { version = "0.15.2", default-features = false, features = ["alloc"] }
babe = { package = "pallet-babe", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }

[dev-dependencies]
sp-serializer = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
pretty_assertions = "0.5.1"

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"primitives/std",
	"trie/std",
	"sp-api/std",
	"rstd/std",
	"sp-version/std",
	"runtime_primitives/std",
	"serde",
	"polkadot-parachain/std",
	"bitvec/std",
	"babe/std"
]
