[package]
name = "polkadot-rpc"
version = "0.7.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
client = { package = "sc-client", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
jsonrpc-core = "14.0.3"
polkadot-primitives = { path = "../primitives" }
sp-runtime = { git = "https://github.com/cheme/substrate", branch = "updatable_traverse"  }
sc-rpc = { git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/cheme/substrate", branch = "updatable_traverse"  }
pallet-transaction-payment-rpc = { git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
polkadot-runtime = { path = "../runtime" }

