[package]
name = "polkadot-rpc"
version = "0.8.22"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "14.0.3"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend"  }
sp-blockchain = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend"  }
sp-runtime = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend"  }
sp-api = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend"  }
sp-consensus = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend"  }
sp-consensus-babe = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend"  }
sc-rpc = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-consensus-babe = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend"}
sc-consensus-babe-rpc = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend"}
sc-consensus-epochs = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend"}
sc-finality-grandpa = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-finality-grandpa-rpc = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-keystore = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend"}
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend"  }
pallet-transaction-payment-rpc = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-block-builder = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
