[package]
name = "polkadot-runtime"
version = "0.6.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
bitvec = { version = "0.14.0", default-features = false, features = ["alloc"] }
rustc-hex = { version = "2.0.1", default-features = false }
log = { version = "0.3", optional = true }
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false}
primitives = { package = "polkadot-primitives", path = "../primitives", default-features = false }
codec = { package = "parity-scale-codec", version = "~1.0.0", default-features = false, features = ["derive"] }
substrate-serializer = { git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
rstd = { package = "sr-std", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
sr-io = { git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
srml-support = { git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
substrate-primitives = { git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
client = { package = "substrate-client", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
inherents = { package = "substrate-inherents", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
authorship = { package = "srml-authorship", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
balances = { package = "srml-balances", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
collective = { package = "srml-collective", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
elections = { package = "srml-elections", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
democracy = { package = "srml-democracy", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
executive = { package = "srml-executive", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
finality-tracker = { package = "srml-finality-tracker", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
grandpa = { package = "srml-grandpa", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
im-online = { package = "srml-im-online", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
indices = { package = "srml-indices", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
membership = { package = "srml-membership", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
offences = { package = "srml-offences", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
sr-primitives = { git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
sr-staking-primitives = { git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
session = { package = "srml-session", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
staking = { package = "srml-staking", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
sudo = { package = "srml-sudo", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
system = { package = "srml-system", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
timestamp = { package = "srml-timestamp", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
treasury = { package = "srml-treasury", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
version = { package = "sr-version", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
babe = { package = "srml-babe", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }
substrate-session = { git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }

[dev-dependencies]
hex-literal = "0.2.0"
libsecp256k1 = "0.2.1"
tiny-keccak = "1.4.2"
keyring = { package = "substrate-keyring", git = "https://github.com/cheme/substrate", branch = "ecr-cumulus-branch" }
substrate-trie = { git = "https://github.com/cheme/substrate", branch = "ecr-cumulus-branch" }
trie-db = "0.15"
serde_json = "1.0"

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.1" }

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"codec/std",
	"inherents/std",
	"substrate-primitives/std",
	"client/std",
	"offchain-primitives/std",
	"rstd/std",
	"sr-io/std",
	"srml-support/std",
	"authorship/std",
	"balances/std",
	"collective/std",
	"elections/std",
	"democracy/std",
	"executive/std",
	"finality-tracker/std",
	"grandpa/std",
	"im-online/std",
	"indices/std",
	"membership/std",
	"offences/std",
	"sr-primitives/std",
	"sr-staking-primitives/std",
	"session/std",
	"staking/std",
	"sudo/std",
	"system/std",
	"timestamp/std",
	"treasury/std",
	"version/std",
	"serde_derive",
	"serde/std",
	"log",
	"safe-mix/std",
	"babe/std",
	"babe-primitives/std",
]
