[package]
name = "polkadot-runtime"
version = "0.6.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
bitvec = { version = "0.14.0", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "~1.0.0", default-features = false, features = ["derive"] }
log = { version = "0.3", optional = true }
rustc-hex = { version = "2.0.1", default-features = false }
safe-mix = { version = "1.0", default-features = false}
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }

authority-discovery-primitives = { package = "substrate-authority-discovery-primitives", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
sr-api = { git = "https://github.com/cheme/substrate", branch = "overlay_change", default-features = false }
inherents = { package = "substrate-inherents", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
rstd = { package = "sr-std", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
sr-io = { git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
sr-primitives = { git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
sr-staking-primitives = { git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
substrate-primitives = { git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
substrate-serializer = { git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
substrate-session = { git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
version = { package = "sr-version", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
tx-pool-api = { package = "substrate-transaction-pool-runtime-api", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
block-builder-api = { package = "substrate-block-builder-runtime-api", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }

authority-discovery = { package = "paint-authority-discovery", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
authorship = { package = "paint-authorship", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
babe = { package = "paint-babe", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
balances = { package = "paint-balances", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
transaction-payment = { package = "paint-transaction-payment", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
paint-transaction-payment-rpc-runtime-api = { git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
collective = { package = "paint-collective", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
democracy = { package = "paint-democracy", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
elections-phragmen = { package = "paint-elections-phragmen", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
executive = { package = "paint-executive", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
finality-tracker = { package = "paint-finality-tracker", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
grandpa = { package = "paint-grandpa", git = "https://github.com/cheme/substrate", default-features = false, features = ["migrate-authorities"], branch = "overlay_change" }
im-online = { package = "paint-im-online", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
indices = { package = "paint-indices", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
membership = { package = "paint-membership", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
nicks = { package = "paint-nicks", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
offences = { package = "paint-offences", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
randomness-collective-flip = { package = "paint-randomness-collective-flip", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
session = { package = "paint-session", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
paint-support = { git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
staking = { package = "paint-staking", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
paint-staking-reward-curve = { git = "https://github.com/cheme/substrate", branch = "overlay_change" }
sudo = { package = "paint-sudo", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
system = { package = "paint-system", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
system_rpc_runtime_api = { package = "paint-system-rpc-runtime-api", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
timestamp = { package = "paint-timestamp", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }
treasury = { package = "paint-treasury", git = "https://github.com/cheme/substrate", default-features = false, branch = "overlay_change" }

primitives = { package = "polkadot-primitives", path = "../primitives", default-features = false }
polkadot-parachain = { path = "../parachain", default-features = false }

[dev-dependencies]
hex-literal = "0.2.0"
libsecp256k1 = "0.3.1"
tiny-keccak = "1.4.2"
keyring = { package = "substrate-keyring", git = "https://github.com/cheme/substrate", branch = "overlay_change" }
substrate-trie = { git = "https://github.com/cheme/substrate", branch = "overlay_change" }
trie-db = "0.15"
serde_json = "1.0"

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.3" }

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"authority-discovery/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"codec/std",
	"inherents/std",
	"substrate-primitives/std",
	"polkadot-parachain/std",
	"sr-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"rstd/std",
	"sr-io/std",
	"paint-support/std",
	"authorship/std",
	"balances/std",
	"transaction-payment/std",
	"paint-transaction-payment-rpc-runtime-api/std",
	"collective/std",
	"elections-phragmen/std",
	"democracy/std",
	"executive/std",
	"finality-tracker/std",
	"grandpa/std",
	"im-online/std",
	"indices/std",
	"membership/std",
	"nicks/std",
	"offences/std",
	"sr-primitives/std",
	"sr-staking-primitives/std",
	"session/std",
	"staking/std",
	"sudo/std",
	"system/std",
	"system_rpc_runtime_api/std",
	"timestamp/std",
	"treasury/std",
	"version/std",
	"serde_derive",
	"serde/std",
	"log",
	"safe-mix/std",
	"babe/std",
	"babe-primitives/std",
	"substrate-session/std",
	"randomness-collective-flip/std",
]
