[package]
name = "polkadot-runtime"
version = "0.6.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
bitvec = { version = "0.15.2", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }
log = { version = "0.3.9", optional = true }
rustc-hex = { version = "2.0.1", default-features = false }
safe-mix = { version = "1.0.0", default-features = false }
serde = { version = "1.0.102", default-features = false }
serde_derive = { version = "1.0.102", optional = true }

authority-discovery-primitives = { package = "substrate-authority-discovery-primitives", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
sr-api = { git = "https://github.com/cheme/substrate", branch = "child_uuid_nt", default-features = false }
inherents = { package = "substrate-inherents", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
rstd = { package = "sr-std", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
sr-io = { git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
sr-primitives = { git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
sr-staking-primitives = { git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
substrate-primitives = { git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
substrate-serializer = { git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
substrate-session = { git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
version = { package = "sr-version", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
tx-pool-api = { package = "substrate-transaction-pool-runtime-api", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
block-builder-api = { package = "substrate-block-builder-runtime-api", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }

authority-discovery = { package = "pallet-authority-discovery", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
authorship = { package = "pallet-authorship", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
babe = { package = "pallet-babe", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
balances = { package = "pallet-balances", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
collective = { package = "pallet-collective", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
democracy = { package = "pallet-democracy", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
elections-phragmen = { package = "pallet-elections-phragmen", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
executive = { package = "palette-executive", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
finality-tracker = { package = "pallet-finality-tracker", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
grandpa = { package = "pallet-grandpa", git = "https://github.com/cheme/substrate", default-features = false, features = ["migrate-authorities"], branch = "child_uuid_nt" }
im-online = { package = "pallet-im-online", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
indices = { package = "pallet-indices", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
membership = { package = "pallet-membership", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
nicks = { package = "pallet-nicks", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
offences = { package = "pallet-offences", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
randomness-collective-flip = { package = "pallet-randomness-collective-flip", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
session = { package = "pallet-session", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
palette-support = { git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
staking = { package = "pallet-staking", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
pallet-staking-reward-curve = { git = "https://github.com/cheme/substrate", branch = "child_uuid_nt" }
sudo = { package = "pallet-sudo", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
system = { package = "palette-system", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
system_rpc_runtime_api = { package = "palette-system-rpc-runtime-api", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
timestamp = { package = "pallet-timestamp", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }
treasury = { package = "pallet-treasury", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_nt" }

primitives = { package = "polkadot-primitives", path = "../primitives", default-features = false }
polkadot-parachain = { path = "../parachain", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"
libsecp256k1 = "0.3.2"
tiny-keccak = "1.5.0"
keyring = { package = "substrate-keyring", git = "https://github.com/cheme/substrate", branch = "child_uuid_nt" }
substrate-trie = { git = "https://github.com/cheme/substrate", branch = "child_uuid_nt" }
trie-db = "0.15.2"
serde_json = "1.0.41"

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4" }

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"authority-discovery/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"codec/std",
	"inherents/std",
	"substrate-primitives/std",
	"polkadot-parachain/std",
	"sr-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"rstd/std",
	"sr-io/std",
	"palette-support/std",
	"authorship/std",
	"balances/std",
	"transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"collective/std",
	"elections-phragmen/std",
	"democracy/std",
	"executive/std",
	"finality-tracker/std",
	"grandpa/std",
	"im-online/std",
	"indices/std",
	"membership/std",
	"nicks/std",
	"offences/std",
	"sr-primitives/std",
	"sr-staking-primitives/std",
	"session/std",
	"staking/std",
	"sudo/std",
	"system/std",
	"system_rpc_runtime_api/std",
	"timestamp/std",
	"treasury/std",
	"version/std",
	"serde_derive",
	"serde/std",
	"log",
	"safe-mix/std",
	"babe/std",
	"babe-primitives/std",
	"substrate-session/std",
	"randomness-collective-flip/std",
]
