[package]
name = "polkadot-service"
version = "0.7.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parking_lot = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.8"
futures = "0.1.29"
futures03 = { package = "futures", version = "0.3.1", features = ["compat"] }
exit-future = "0.1.4"
slog = "2.5.2"
hex-literal = "0.2.1"
av_store = { package = "polkadot-availability-store", path = "../availability-store" }
consensus = { package = "polkadot-validation", path = "../validation" }
polkadot-primitives = { path = "../primitives" }
polkadot-runtime = { path = "../runtime" }
polkadot-executor = { path = "../executor" }
polkadot-network = { path = "../network"  }
polkadot-rpc = { path = "../rpc" }
sr-io = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
sr-api = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
sr-primitives = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
primitives = { package = "substrate-primitives", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
client = { package = "substrate-client", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
client-api = { package = "substrate-client-api", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
client-db = { package = "substrate-client-db", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
substrate-executor = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
substrate-network = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
consensus_common = { package = "substrate-consensus-common", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
grandpa_primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
inherents = { package = "substrate-inherents", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
service = { package = "substrate-service", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
telemetry = { package = "substrate-telemetry", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
txpool = { package = "sc-transaction-pool", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
txpool-api = { package = "sp-transaction-pool-api", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
substrate-keystore = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
pallet-babe = { git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }
pallet-staking = { git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }
im-online = { package = "pallet-im-online", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }
authority-discovery = { package = "substrate-authority-discovery", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
authority-discovery-primitives = { package = "substrate-authority-discovery-primitives", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
babe = { package = "substrate-consensus-babe", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }
